# paste

./: .gitignore  Cargo.toml  LICENSE  README.md  paste.1  paste.1_gen.sh
.devcontainer/: devcontainer.json
.github/workflows/: rust.yaml
src/: error.rs  main.rs  store.rs  web.rs
tests/: quick_dev.rs
