[package]
name = "paste"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nop/paste"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "v5",
] }
async-trait = "0.1.74"
crypto = "0.5.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
